feat: updated codes to convert the tensorflow.python.framework.ops.EagerTensor to list

--- a/universal_sentence_encoder.ipynb
+++ b/universal_sentence_encoder.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,16 +19,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-07-18 16:59:37.787530: W tensorflow/tsl/framework/cpu_allocator_impl.cc:83] Allocation of 17067520 exceeds 10% of free system memory.\n",
+      "2023-07-18 16:59:37.799627: W tensorflow/tsl/framework/cpu_allocator_impl.cc:83] Allocation of 17067520 exceeds 10% of free system memory.\n",
+      "2023-07-18 16:59:37.811611: W tensorflow/tsl/framework/cpu_allocator_impl.cc:83] Allocation of 17067520 exceeds 10% of free system memory.\n",
+      "2023-07-18 16:59:37.822877: W tensorflow/tsl/framework/cpu_allocator_impl.cc:83] Allocation of 17067520 exceeds 10% of free system memory.\n",
+      "2023-07-18 16:59:37.834885: W tensorflow/tsl/framework/cpu_allocator_impl.cc:83] Allocation of 17067520 exceeds 10% of free system memory.\n"
+     ]
+    }
+   ],
    "source": [
     "embed = hub.load(\"universal-sentence-encoder-large/5\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,11 +51,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 512) <dtype: 'float32'>\n"
+     ]
+    }
+   ],
    "source": [
     "print(embeddings.shape, embeddings.dtype)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensorflow.python.framework.ops.EagerTensor"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(embeddings[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'> 512\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "x_np = embeddings[0].numpy()\n",
+    "x_list = x_np.tolist()\n",
+    "\n",
+    "print(type(x_list), len(x_list))"
    ]
   },
   {
