feat: fixed server and OpenAIEmbeddings class to work with pydantic v2

--- a/embeddings.ipynb
+++ b/embeddings.ipynb
@@ -34,17 +34,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "0be1af71",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/limcheekin/ws/py/open-text-embeddings/venv/lib/python3.10/site-packages/pydantic/_internal/_fields.py:127: UserWarning: Field \"model_name\" has conflict with protected namespace \"model_\".\n",
+      "\n",
+      "You may be able to resolve this warning by setting `model_config['protected_namespaces'] = ()`.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "from open.text.embeddings.openai import OpenAIEmbeddings"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "2c66e5da",
    "metadata": {},
    "outputs": [],
@@ -54,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "14aefb64",
    "metadata": {},
    "outputs": [],
@@ -64,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "3c39ed33",
    "metadata": {},
    "outputs": [],
@@ -74,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "f77b92ec",
    "metadata": {},
    "outputs": [
@@ -84,7 +95,7 @@
        "1024"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "e3221db6",
    "metadata": {},
    "outputs": [],
@@ -105,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "f1bca093",
    "metadata": {},
    "outputs": [
@@ -115,7 +126,7 @@
        "1"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "id": "79685ea4",
    "metadata": {},
    "outputs": [
@@ -136,7 +147,7 @@
        "1024"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "7e83f051",
    "metadata": {},
    "outputs": [
@@ -157,7 +168,7 @@
        "False"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,22 +179,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "aaad49f8",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'os' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[11], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# if you are behind an explicit proxy, you can use the OPENAI_PROXY environment variable to pass through\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m os\u001b[39m.\u001b[39menviron[\u001b[39m\"\u001b[39m\u001b[39mOPENAI_PROXY\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mhttp://proxy.yourcompany.com:8080\u001b[39m\u001b[39m\"\u001b[39m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'os' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# if you are behind an explicit proxy, you can use the OPENAI_PROXY environment variable to pass through\n",
     "os.environ[\"OPENAI_PROXY\"] = \"http://proxy.yourcompany.com:8080\""
