feat: moved initialize_embeddings() to create_app() and removed 'model' param

--- a/embeddings.ipynb
+++ b/embeddings.ipynb
@@ -6,12 +6,7 @@
    "id": "278b6c63",
    "metadata": {},
    "source": [
-    "# OpenAI Embeddings\n",
-    "\n",
-    "Setup LangChain 0.0.232. When using this or greater version of LangChain, the custom `open.text.embeddings.openai.OpenAIEmbeddings` class no longer needed.\n",
-    "\n",
-    "Please see the following GitHub issue for more information:\n",
-    "https://github.com/hwchase17/langchain/pull/6573"
+    "# OpenAI Embeddings"
    ]
   },
   {
