docs: updated readme and embeddings notebook and added citation

--- a/embeddings.ipynb
+++ b/embeddings.ipynb
@@ -6,7 +6,7 @@
    "id": "278b6c63",
    "metadata": {},
    "source": [
-    "# OpenAI Embeddings"
+    "# open-text-embeddings"
    ]
   },
   {
@@ -16,7 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install -U langchain openai tiktoken"
+    "%pip install -U langchain openai"
    ]
   },
   {
@@ -159,17 +159,6 @@
    ],
    "source": [
     "doc_result[0] == query_result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "aaad49f8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# if you are behind an explicit proxy, you can use the OPENAI_PROXY environment variable to pass through\n",
-    "os.environ[\"OPENAI_PROXY\"] = \"http://proxy.yourcompany.com:8080\""
    ]
   },
   {
