GZipRequestMiddleware that cause request error

--- a/embeddings.ipynb
+++ b/embeddings.ipynb
@@ -44,7 +44,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "embeddings = OpenAIEmbeddings(openai_api_base=\"http://localhost:8000/v1\")"
+    "embeddings = OpenAIEmbeddings(\n",
+    "    openai_api_base=\"http://localhost:8000/v1\", \n",
+    "    openai_api_key='sk-')"
    ]
   },
   {
@@ -76,7 +78,7 @@
     {
      "data": {
       "text/plain": [
-       "1024"
+       "384"
       ]
      },
      "execution_count": 5,
@@ -128,7 +130,7 @@
     {
      "data": {
       "text/plain": [
-       "1024"
+       "384"
       ]
      },
      "execution_count": 8,
